# architect

./: .gitignore  manage.py  pyproject.toml
architect/: asgi.py  development.py  production.py  settings.py  urls.py  wsgi.py
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_auto_20200214_1612.py
templates/: base.html
