[tool.poetry]
name = "architect"
version = "0.1.0"
description = ""
authors = ["matthew"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.3"
whitenoise = "^5.0.1"
psycopg2-binary = "^2.8.4"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
django-environ = "^0.4.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
